After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 139385 - when a text file with > MAX_COLS is loaded, a warning should be given
when a text file with > MAX_COLS is loaded, a warning should be given
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: import/export Text
git master
Other All
: Low trivial
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2004-04-07 15:53 UTC by Allin Cottrell
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Allin Cottrell 2004-04-07 15:53:34 UTC
Load into gnumeric a CSV file with > 256 columns.  The data are
silently truncated.
Comment 1 Andreas J. Guelzow 2004-04-08 02:28:24 UTC
Well, I would say that in the configuration dialog for the text import the fact
that only some of the columns are selected for input should be made more visible.
Comment 2 Jody Goldberg 2004-04-08 03:26:49 UTC
Agreed. we could certainly be more vocal when the initial selection is limited
by the number of available columns.
Comment 3 Steffen Möller 2004-04-20 12:57:05 UTC
Well, if started from the console, a whole lot of comments are given (too many).
Besides, in scientific environments the limitation of Excel to 256 columns is
ridiculed by everybody. So people do Access databases only to select columns in
there (like: give me the means of all measurements and leave the medians).

I was shocked to find KOffice totally unusable for larger files and to find
Gnumeric in total compatibiliy with the enemy.
in this respect 

** (gnumeric:2154): CRITICAL **: file ../../src/cell.c: line 215
(cell_set_text): assertion `cell != NULL' failed

** (gnumeric:2154): CRITICAL **: file ../../src/sheet.c: line 2443
(sheet_cell_new): assertion `col < SHEET_MAX_COLS' failed

** (gnumeric:2154): CRITICAL **: file ../../src/cell.c: line 215
(cell_set_text): assertion `cell != NULL' failed

** (gnumeric:2154): CRITICAL **: file ../../src/sheet.c: line 2443
(sheet_cell_new): assertion `col < SHEET_MAX_COLS' failed

** (gnumeric:2154): CRITICAL **: file ../../src/cell.c: line 215
(cell_set_text): assertion `cell != NULL' failed

** (gnumeric:2154): CRITICAL **: file ../../src/sheet.c: line 2443
(sheet_cell_new): assertion `col < SHEET_MAX_COLS' failed

** (gnumeric:2154): CRITICAL **: file ../../src/cell.c: line 215
(cell_set_text): assertion `cell != NULL' failed

** (gnumeric:2154): CRITICAL **: file ../../src/sheet.c: line 2443
(sheet_cell_new): assertion `col < SHEET_MAX_COLS' failed

** (gnumeric:2154): CRITICAL **: file ../../src/cell.c: line 215
(cell_set_text): assertion `cell != NULL' failed

** (gnumeric:2154): CRITICAL **: file ../../src/sheet.c: line 2443
(sheet_cell_new): assertion `col < SHEET_MAX_COLS' failed

** (gnumeric:2154): CRITICAL **: file ../../src/cell.c: line 215
(cell_set_text): assertion `cell != NULL' failed

** (gnumeric:2154): CRITICAL **: file ../../src/sheet.c: line 2443
(sheet_cell_new): assertion `col < SHEET_MAX_COLS' failed

** (gnumeric:2154): CRITICAL **: file ../../src/cell.c: line 215
(cell_set_text): assertion `cell != NULL' failed

** (gnumeric:2154): CRITICAL **: file ../../src/sheet.c: line 2443
(sheet_cell_new): assertion `col < SHEET_MAX_COLS' failed

** (gnumeric:2154): CRITICAL **: file ../../src/cell.c: line 215
(cell_set_text): assertion `cell != NULL' failed

** (gnumeric:2154): CRITICAL **: file ../../src/sheet.c: line 2443
(sheet_cell_new): assertion `col < SHEET_MAX_COLS' failed
Comment 4 Morten Welinder 2004-04-20 13:21:58 UTC
1. Those error messages should obviously not come out that way.
2. If you want more columns, it's just a recompilie away.
Comment 5 Morten Welinder 2004-04-20 17:48:59 UTC
We now no longer spew error messages on stderr, just a single

** (gnumeric:21094): WARNING **: There are more columns of data than there is
room for in the sheet.  Extra columns will be ignored.

This, of course, isn't ideal, but better than nothing.
Comment 6 Andreas J. Guelzow 2004-10-21 14:27:57 UTC
fixed in cvs head